[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/ufo/ufo.png" type="Texture" id=1]
[ext_resource path="res://scripts/Ufo.gd" type="Script" id=2]
[ext_resource path="res://src/ufo/ufo_beam.png" type="Texture" id=3]
[ext_resource path="res://src/sound_effects/ufo_explode.wav" type="AudioStream" id=4]
[ext_resource path="res://src/sound_effects/ufo_noise.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 165.003

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -360 ), 0.0, 0.0, 0, 0, Vector2( 0.962025, 360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Curve" id=4]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -360 ), 0.0, 0.0, 0, 0, Vector2( 1, 360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.981013, -1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 321.84
initial_velocity_random = 1.0
angular_velocity_curve = SubResource( 5 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_curve = SubResource( 3 )
scale = 10.0
scale_curve = SubResource( 9 )
color = Color( 0.968627, 0, 0.611765, 1 )
hue_variation_curve = SubResource( 7 )

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explode:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "change_cam_offset_back"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("ExplodeSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="Ufo" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( 156, 52 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, 2, -3, 6, 3, 6, 8, 2, 8, 0, 3, -6, -3, -6, -8, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -2, 6, -5, 22, -8, 34, -8, 38, 8, 38, 8, 34, 5, 22, 2, 6 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 0, 22 )
z_index = 20
z_as_relative = false
texture = ExtResource( 3 )

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 1 )

[node name="Explode" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 0.75
process_material = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 11 )

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
